force-app/main/default/objects/Position__c/fields/Created_From_Portal__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the position was submitted via portal form</description>
    <label>Created From Portal</label>
    <type>Checkbox</type>
</CustomField>