force-app/main/default/objects/Position__c/fields/Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened__c</fullName>
    <description>When position was created</description>
    <label>Date Opened</label>
    <type>Date</type>
</CustomField>