force-app/main/default/objects/Position__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manager responsible for the role</description>
    <label>Hiring Manager</label>
    <referenceTo>Hiring_Manager__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>