force-app/main/default/objects/Position__c/fields/Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Level__c</fullName>
    <label>Job Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L1</fullName>
            </value>
            <value>
                <fullName>L2</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
            <value>
                <fullName>L4</fullName>
            </value>
            <value>
                <fullName>L5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>