force-app/main/default/objects/Position__c/fields/Openings__c.field-meta.xml
<CustomField>
    <fullName>Openings__c</fullName>
    <description>Total number of hires required</description>
    <label>Openings</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>