force-app/main/default/objects/Position__c/fields/Position_Name__c.field-meta.xml
<CustomField>
    <fullName>Position_Name__c</fullName>
    <label>Position Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>