force-app/main/default/objects/Position__c/fields/Recruiter_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruiter Assigned</label>
    <referenceTo>Hiring_Manager__c</referenceTo>
    <relationshipLabel>Positions (Recruiter Assigned)</relationshipLabel>
    <relationshipName>Recruiter_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>