force-app/main/default/objects/Position__c/fields/Salary_Range__c.field-meta.xml
<CustomField>
    <fullName>Salary_Range__c</fullName>
    <description>e.g., 6–8 LPA</description>
    <label>Salary Range</label>
    <length>50</length>
    <type>Text</type>
</CustomField>