force-app/main/default/objects/Position__c/fields/Skills_Required__c.field-meta.xml
<CustomField>
    <fullName>Skills_Required__c</fullName>
    <label>Skills Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coding Languages</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Business Unit</fullName>
            </value>
            <value>
                <fullName>AI Automation</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Teamwork</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>