force-app/main/default/objects/Position__c/fields/Target_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Hire_Date__c</fullName>
    <description>Ideal date to close the position</description>
    <label>Target Hire Date</label>
    <type>Date</type>
</CustomField>